<resources>
    <string name="app_name">bd.com.momagic.cbs.dashboard.android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_login">Login</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="button_logout">Sign out</string>

    <string name="login_fragment_heading">Central Billing System</string>
    <string name="login_fragment_heading2">(Dashboard)</string>
    <string name="login_fragment_email_field_hint">Email</string>
    <string name="login_fragment_password_field_hint">Password</string>
    <string name="login_fragment_login_button_text">Login</string>
    <string name="login_fragment_image_view_content_description_logo">logo</string>
</resources>
