<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginFragment">

    <data>
        <import type="android.view.View" />
        <variable
            name="authenticationViewModel"
            type="bd.com.momagic.cbs.dashboard.android.ui.viewmodels.AuthenticationViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/fragment_login_minimum_height">
            <ImageView
                android:id="@+id/login_avatar"
                android:layout_width="152dp"
                android:layout_height="159dp"
                android:contentDescription="@string/login_fragment_image_view_content_description_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.15"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_fragment_heading"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_avatar"
                app:layout_constraintVertical_bias="0.088" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_fragment_heading2"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.016"
                android:textColor="@color/dark_gray" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="@{authenticationViewModel.loading ? View.INVISIBLE : View.VISIBLE}"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_fragment_email_field_hint"
                    android:text="@={authenticationViewModel.email}"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:maxLength="@integer/login_fragment_email_maximum_length"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_fragment_password_field_hint"
                    android:text="@={authenticationViewModel.password}"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:maxLength="@integer/login_fragment_password_maximum_length"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/login_fragment_login_button_text"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.229"
                android:visibility="@{authenticationViewModel.loading ? View.INVISIBLE : View.VISIBLE}"
                android:onClick="@{()-> authenticationViewModel.authenticate()}" />

            <ProgressBar
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.735"
                android:visibility="@{authenticationViewModel.loading ? View.VISIBLE : View.INVISIBLE}" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
